# pjdsc

./: .gitignore  README.md  Untitled.ipynb  pres_2022.ipynb  pyproject.toml  technical-journal.md  venv.bat
dataset/: ICT_CONTENT_2015_2017.txt  ICT_CONTENT_2015_2017.xlsx
dataset/Elections Dataset/2019/: SOURCE.txt
notebooks/: dataset.ipynb  location.ipynb  pres_2022.ipynb  votes_and_ict.ipynb  votes_on_updated_locs.ipynb
reports/: Loc - Pandas Profiling Report.html
